[package]
name = "datakiste"
version = "0.11.0"
authors = ["Justin Browne <brownej@nscl.msu.edu>"]
edition = "2018"

[dependencies]
byteorder = "*"
error-chain = "*"
rand = "*"
structopt = "*"
val_unc = { git = "https://github.com/j-browne/val_unc", features = ["serde-1"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "*"
