[package]
name = "datakiste"
version = "0.13.1"
authors = ["Justin Browne <brownej@nscl.msu.edu>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
bincode = "*"
error-chain = "*"
indexmap = { version = "1.3.1", features = ["serde-1"] }
rand = "*"
structopt = "*"
val_unc = { git = "https://github.com/j-browne/val_unc", features = ["serde"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = { version = "*", features = ["preserve_order"] }
